<resources>
    <string name="app_name">助驾帮</string>
    <string name="share_loading_picture">图片正在加载，请稍候...</string>
    <string name="share_render_picture">正在准备图片，请稍候...</string>
    <string name="sina_support_api">微博客户端不支持SDK分享或微博客户端未安装或微博客户端是非官方版本</string>
    <string name="web_default_page_text">Webpage 默认文案</string>
    <string name="share_error">分享出现异常，请重试</string>
    <string name="weixin_not_install">没有安装微信客户端</string>
    <string name="weixin_timeline_support">微信版本号过低，不支持朋友圈分享</string>
    <string name="qq_support">你尚未安装QQ客户端，或者QQ版本过低</string>
    <string name="share_finish">分享完成</string>
    <string name="comment_no_name">匿名用户</string>
    <string name="login">登录</string>
    <string name="login_now">登录中...</string>
    <string name="try_it_now">立即体验</string>
    <string name="home_page">教练圈</string>
    <string name="discover_page">发现</string>
    <string name="mine_page">我的</string>
    <string name="invite_code">邀请码</string>
    <string name="invite_illustrate">初次使用需要填写邀请码</string>
    <string name="input_invite_code">请输入邀请码</string>
    <string name="filled_out">填好了</string>
    <string name="input_correct_invite_code">请输入4位有效邀请码</string>
    <string name="pls_wait">正在验证,请稍后...</string>
    <string name="invalid_invite_code">邀请码验证失败,请重试</string>
    <string name="today">今日</string>
    <string name="yesterday_influence">昨日影响力</string>
    <string name="details">提现</string>
    <string name="influence">影响力</string>
    <string name="today_task">今日资讯</string>
    <string name="accept_increase_influence">分享出去,给自己打广告吧</string>
    <string name="forwards">转发</string>
    <string name="reviews">访问</string>
    <string name="yesterday_commission">昨日收佣(元)</string>
    <string name="my_commission">赚得佣金(元)</string>
    <string name="countdown">倒计时</string>
    <string name="accept">接受任务</string>
    <string name="task_desc">任务描述</string>
    <string name="share_str">分享</string>
    <string name="title_drive_school">驾校</string>
    <string name="task_update_time">助驾帮今日8:00更新资讯</string>
    <string name="app_use_time">你陪伴助驾帮成长%1$s天啦,昨日影响了%2$s人</string>
    <string name="network_error">网络不好,请重试</string>
    <string name="download">下载</string>
    <string name="download_progress">下载进度%s</string>
    <string name="download_finish">下载完成</string>
    <string name="main_version_update">版本升级</string>
    <string name="down_load_now">正在下载最新版本</string>
    <string name="inf_change_title">分享资讯,可以增加影响力,还能传播品牌</string>
    <string name="inf_increased">影响力增加</string>
    <string name="inf_change_dialog_btn_text">查看我影响了谁</string>
    <string name="view_news">查看资讯</string>
    <string name="views_adv">预览广告效果>></string>
    <string name="views_adv_title">预览广告效果</string>
    <string name="mark">“%s”</string>
    <string name="view_right_now">立即查看</string>
    <string name="coach_influence">你的广告指数</string>
    <string name="access_you">准学员访问你</string>
    <string name="advertise_for_me">为自己打广告</string>
    <string name="advertising_now">立即打广告&#160;&#160;>></string>
    <string name="num_day">%s天</string>
    <string name="num_time">%s次</string>
    <string name="num_access">%s位</string>
    <string name="student">学员</string>
    <string name="share_news_to_advertise">每日分享资讯，顺其自然为自己打广告</string>
    <string name="views_your_adv">看过你的广告</string>
    <string name="click_to_dynamic">去动态跟踪广告效果</string>
    <string name="vis_num">%s人</string>
    <string name="news_remind_tips">每日分享资讯，顺其自然为自己打广告</string>
    <string name="inf_pop_content">你的广告被访问得越多，广告指数越大</string>
    <string name="how_to_use">如何使用</string>
    <string name="news_hall_title">今日资讯广告</string>
    <string name="guide_text1">资讯广告每一天都会不一样</string>
    <string name="guide_text2">为自己打广告,从分享资讯开始吧</string>
    <string name="identity_verification_title">身份核实</string>
    <string name="perfect_immediately">立即完善</string>
    <string name="identity_verification_content"> 助驾帮业务仅对教练开放，请完善个人资料</string>
    <string name="news_hall_help">1.&#160;资讯广告是助驾帮专为驾驶教练提供的为自己打广告的手段之一。\n\n2.&#160;将学员感兴趣的资讯与教练个人品牌相结合，由教练分享到学员群或朋友圈推荐学员阅读，以此起到传播自己，为自己打广告的作用。\n\n3.&#160;若能动员学员帮你转发，还能增加转介绍哦。</string>
    <string name="token_expired">登录失效,请重新登录</string>
    <string name="first_share">今日首次分享,积分+2</string>
    <string name="receive_brand_text">成功领取教练名牌\n预览看看吧</string>
    <string name="share">分享</string>
    <string name="views_photo">查看照片</string>
    <string name="item_views_dynamic">查看动态</string>
    <string name="item_business">业务厅</string>
    <string name="item_task">今日资讯</string>
    <string name="item_welfare">福利</string>
    <string name="item_enrollment_site">招生网站</string>
    <string name="item_spread_tools">积分商城</string>
    <string name="new_business">有新的业务</string>
    <string name="new_welfare">有新的福利</string>
    <string name="enrollment_site_share_title">最个性的教练空间来了</string>
    <string name="enrollment_site_share_content">助驾帮倾力打造最个性的教练空间，现在接受预约申请啦</string>
    <string name="spread_tools_share_title">我是教练%s</string>
    <string name="spread_tools_share_content">来自%s教练的录音,听还是不听？</string>
    <string name="new_dynamic">有新动态</string>
    <string name="view_today_news">为自己打广告</string>
    <string name="earn_pocket_money">增收新手段,赚点零花钱</string>
    <string name="extension_services">推广服务</string>
    <string name="plan_setting">宣传方案</string>
    <string name="teach_age">教龄</string>
    <string name="personal_info">更新我的资料</string>
    <string name="always_exam">常驻考场</string>
    <string name="exercise_address">常练车地址</string>
    <string name="share_to_other">分享助驾帮</string>
    <string name="advisory">客服</string>
    <string name="my_team">我的团队</string>
    <string name="my_fans">谁最关注我</string>
    <string name="perfection_profile">您还有资料未填写,将会影响您的传播效益哦</string>
    <string name="person_center">个人中心</string>
    <string name="profile_share_title">有想法的教练都在这里</string>
    <string name="profile_share_subject">“助驾帮”教练火热招募中……精彩活动,优质业务等你来完成!有想法的教练都在这里!</string>
    <string name="who_care_me">谁最关注我</string>
    <string name="my_wallet">钱包</string>
    <string name="my_album">我的相册</string>
    <string name="pls_input_sum">请输入提现金额</string>
    <string name="pls_input_info">请输入提现信息</string>
    <string name="sum_text_hint">提现金额只支持100的倍数</string>
    <string name="bank">银行</string>
    <string name="bank_num">银行卡号</string>
    <string name="pls_input_bank_name">请输入银行名称</string>
    <string name="pls_input_bank_num">请输入银行卡号</string>
    <string name="next_step">下一步</string>
    <string name="apply">您正在申请提现至</string>
    <string name="card_num">卡号</string>
    <string name="money_sum">金额</string>
    <string name="pls_input_card_owner_info">请输入持卡本人的信息</string>
    <string name="name">姓名</string>
    <string name="id_card">身份证号</string>
    <string name="tel_num">手机号</string>
    <string name="pls_input_name">请输入姓名</string>
    <string name="pls_input_card_id">请输入身份证号</string>
    <string name="pls_input_tel_num">请输入手机号</string>
    <string name="pls_input_valid_num">请输入有效的提现金额</string>
    <string name="pls_input_valid_num_while">您的余额不足,请重新输入提现金额</string>
    <string name="pls_input_valid_bank_name">请输入银行名称</string>
    <string name="pls_input_valid_bank_id">请输入有效的银行卡账号</string>
    <string name="pls_input_valid_card_id">请输入有效的身份证号</string>
    <string name="pls_input_valid_tel_num">请输入有效的手机号码</string>
    <string name="tip">提示</string>
    <string name="tips">温馨提示</string>
    <string name="commit_success">你的提现申请已提交成功,预计到账时间为%s,请注意查收</string>
    <string name="confirm">确认</string>
    <string name="close">关闭</string>
    <string name="balance">余额%s元</string>
    <string name="helper">帮助</string>
    <string name="i_know_it">我知道啦</string>
    <string name="with_draw_help">1.仅支持100的倍数的金额提现\n2.每月5日、15日、25日为财务结算日，您发起提现申请后，我们会在财务结算当日，汇款至您的银行账户，请注意查收\n
3.如需紧急处理或遇到问题，请到个人中心联系客服，或致电工作人员：028-64897280</string>
    <string name="today_news">今日资讯</string>
    <string name="new_hall">资讯厅</string>
    <string name="business_has_been_accepted">今日已受理业务</string>
    <string name="times">次</string>
    <string name="inquiry_to_buy">先询价再购买</string>
    <string name="quick_quote">已询价的车险业务</string>
    <string name="has_inquiry">办理车险业务</string>
    <string name="car_insurance">车险</string>
    <string name="ins_list_title">已询价</string>
    <string name="insurance_inquiry">车险询价</string>
    <string name="inquiry_now">立即询价</string>
    <string name="new_car_for_insurance">新车购保</string>
    <string name="app_ins_title">办理车险</string>
    <string name="apply_insurance">续保</string>
    <string name="ways_to_purchase">购保方式</string>
    <string name="upload_material">上传材料</string>
    <string name="insurance_tips">新车购保,需要提供身份证正、反面，车辆合格证，购车发票，才能进行车险询价</string>
    <string name="item_owner_name">车主姓名</string>
    <string name="pls_input_owner_name">请输入车主姓名</string>
    <string name="item_tel">联系电话</string>
    <string name="pls_input_tel">请输入联系电话</string>
    <string name="item_owner_card">身份证号</string>
    <string name="item_positive_identification">身份证正面</string>
    <string name="item_negative_identification">身份证反面</string>
    <string name="item_driving_license_first_page">行驶证第一页</string>
    <string name="item_driving_license_second_page">行驶证第二页</string>
    <string name="item_driving_license_positive_page">行驶证正面照片</string>
    <string name="select_from_gallery">从手机相册中选择</string>
    <string name="old_car_insurance_tips">车险续保,需要提供身份证正、反面，行驶证第一页、第二页，才能进行车险续保</string>
    <string name="name_not_be_null">车主姓名不能为空</string>
    <string name="pls_select_upload_file">请选择要上传的证件</string>
    <string name="commit_now">正在提交信息,请稍后...</string>
    <string name="car_certificate">车辆合格证</string>
    <string name="car_invoice">购车发票</string>
    <string name="error">错误</string>
    <string name="post_info_error">提交信息失败,点击确定重新上传</string>
    <string name="upload_pic_error">上传图片失败,点击确定重新上传</string>
    <string name="inquiry_success">询价成功</string>
    <string name="inquiry_tips">助驾帮已收到你的询价申请,我们会在24小时内处理你的业务,请耐心等待。</string>
    <string name="improve_personal_information">验证手机号才能办理车险业务哦，也方便我们将车险业务进展情况及时反馈给你。</string>
    <string name="improve_personal_information_now">立即验证</string>
    <string name="inquiry_list_tips">以下是询价后的业务,可直接购买车险</string>
    <string name="price">价格</string>
    <string name="insurance_company">保险公司</string>
    <string name="insurance_reviews">预览报价单</string>
    <string name="pay">缴费</string>
    <string name="expired">已失效</string>
    <string name="cancel">取消</string>
    <string name="hint_phone">请输入11位手机号</string>
    <string name="location_city">定位城市</string>
    <string name="location_now">城市定位中...</string>
    <string name="other_tips">四川省外的教练,请选择\"其他\"并输入驾校名</string>
    <string name="other">其他</string>
    <string name="city_tips">四川其他城市</string>
    <string name="new_function">新功能</string>
    <string name="new_function_introduce">\u3000\u3000团队管理是助驾帮产品团队专门为平台签约教练打造的功能，帮助签约教练管理自己好的教练团队。</string>
    <string name="Iknowit">我知道了</string>
    <string name="camera_upload">拍照上传</string>
    <string name="choose_album_upload">选择照片上传</string>
    <string name="hint_verify_code">请输入验证码</string>
    <string name="verify_code">验证码</string>
    <string name="into_zjb">进入助驾帮</string>
    <string name="invite_code_tips">初次使用建议填写邀请码(选填)</string>
    <string name="ins_des_title">投保说明:</string>
    <string name="ins_des">1.仅限报考C照且未报考过科目二的学员\n2.申报人信息关系到资料审核以及保单传递，请务必填写真实信息\n3.驾考防爆险保费100元/人/份\n4.出单时间为周一至周五(如学员下周一参加考试,请务必在周五之前提交办理信息)</string>
    <string name="apply_test_ins">申请投保驾考防爆险</string>
    <string name="query_already_submitted">查询已提交的申请</string>
    <string name="ins_num">助驾帮驾考防爆险&#160;x&#160;1</string>
    <string name="apply_time">申请时间:&#160;&#160;%s</string>
    <string name="insured_name">投保人姓名</string>
    <string name="insured_id_card">投保人身份证号</string>
    <string name="insured_tel">投保人电话</string>
    <string name="pay_tips">注意:如支付遇到问题,请到个人中心联系客服,或致电\n028&#8211;64897280</string>
    <string name="total_price">总计:%s元</string>
    <string name="how_to_apply">如何办理&#160;>></string>
</resources>