<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/banner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/main_banner" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_margin="5.0dp"
            android:drawablePadding="5.0dp"
            android:text="@string/how_to_apply"
            android:textColor="@color/text_color_white"
            android:textSize="11.0sp" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dp"
        android:layout_marginTop="20.0dp"
        android:text="@string/ins_des_title"
        android:textColor="@color/black_87"
        android:textSize="14.0sp" />

    <TextView
        android:id="@+id/detail_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20.0dp"
        android:layout_marginRight="20.0dp"
        android:layout_marginTop="10.0dp"
        android:text="@string/ins_des"
        android:textColor="#888888"
        android:textSize="11.0sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80.0dp"
        android:orientation="vertical"
        android:paddingLeft="25.0dp"
        android:paddingRight="25.0dp">

        <Button
            android:id="@+id/apply"
            android:layout_width="match_parent"
            android:layout_height="44.0dp"
            android:layout_marginTop="6.0dp"
            android:background="@drawable/btn_withdraw"
            android:text="@string/apply_test_ins"
            android:textColor="@color/text_color_white"
            android:textSize="16.0sp" />

        <Button
            android:id="@+id/query"
            android:layout_width="match_parent"
            android:layout_height="44.0dp"
            android:layout_marginTop="15.0dp"
            android:background="@drawable/btn_inquiry"
            android:text="@string/query_already_submitted"
            android:textColor="@color/inquiry_text_selector"
            android:textSize="16.0sp" />
    </LinearLayout>

</LinearLayout>