<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="17dp"
        android:background="@color/h_divider_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/location1"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/tel_num"
            android:textColor="#2b2b2b"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/bindPhone_verifyTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_withdraw"
            android:clickable="true"
            android:gravity="center"
            android:minWidth="49dp"
            android:onClick="getVerifyCode"
            android:padding="8dp"
            android:text="@string/verify_code"
            android:textColor="@android:color/white"
            android:textSize="11sp" />


        <EditText
            android:id="@+id/bindPhone_phoneEt"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginLeft="35dp"
            android:layout_toLeftOf="@+id/bindPhone_verifyTv"
            android:layout_toRightOf="@+id/location1"
            android:background="@null"
            android:hint="@string/hint_phone"
            android:inputType="number"
            android:maxLength="11"
            android:singleLine="true"
            android:textColorHint="#bbb"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginLeft="20dp"
        android:background="@color/v_divider_line_color" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:background="@android:color/white">

        <TextView
            android:id="@+id/location2"
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:text="@string/verify_code"
            android:textColor="#2b2b2b"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/bindPhone_verifycodeEt"
            android:layout_width="match_parent"
            android:layout_height="41dp"
            android:layout_marginLeft="35dp"
            android:layout_toRightOf="@+id/location2"
            android:background="@null"
            android:hint="@string/hint_verify_code"
            android:inputType="number"
            android:maxLength="4"
            android:paddingRight="20dp"
            android:singleLine="true"
            android:textColorHint="#bbb"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/v_divider_line_color" />

    <LinearLayout
        android:id="@+id/invite_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20.0dp"
            android:layout_marginTop="25.0dp"
            android:text="@string/invite_code_tips"
            android:textColor="@color/black_52"
            android:textSize="11.0sp" />

        <include
            android:id="@+id/item_invite_code"
            layout="@layout/vw_input_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6.0dp" />
    </LinearLayout>

    <Button
        android:id="@+id/bindPhone_surebt"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="25.0dp"
        android:layout_marginRight="25.0dp"
        android:layout_marginTop="100.0dp"
        android:background="@drawable/btn_withdraw"
        android:text="@string/into_zjb"
        android:textColor="@android:color/white"
        android:textSize="16sp" />
</LinearLayout>
